environments/kapoozi/client-app/base/gh-action-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-action-client
  namespace: client
  labels:
    app: gh-action-client
spec:
  ports:
  - port: 5000
    name: http
  selector:
    name: gh-action-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gh-action-client-deployment
  namespace: client
  labels:
    app: gh-action-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gh-action-client
  template:
    metadata:
      labels:
        name: gh-action-client
    spec:
      serviceAccountName: gh-action-client
      containers:
      - name: gh-action-client
        image: ably77/curl-ui:0.7.3
        ports:
        - containerPort: 5000
