environments/kapoozi/client-app/base/client-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: client-route
  namespace: client
  labels:
    example: chatbot-route
    gateway: https
spec:
  hostnames:
  - "client.kapoozi.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: gh-action-client
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
          #headers:
          #  - name: "x-access-code"
          #    value: "chatbot"
      #filters:
      #- type: ExtensionRef
      #  extensionRef:
      #    group: gateway.solo.io
      #    kind: RouteOption
      #    name: client-route-policies
