environments/kapoozi/client-app/base/gh-action-client-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gh-action-client-delegate-route
  namespace: client
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /gh-action-client
      backendRefs:
        - name: gh-action-client
          port: 5000
          weight: 100
